dot dark mode fixed

--- a/src/components/pages/MovieList/MovieList.scss
+++ b/src/components/pages/MovieList/MovieList.scss
@@ -100,11 +100,12 @@
           }
 
           .punkt {
-            margin-inline: 7px;
-            margin-bottom: 2px;
-            box-shadow: 0px 0px 5px 1px #ffffffac;
-            background-color: #ffffffac;
-            border-radius: 25%;
+            display: inline-block;
+            padding: 3px;
+            margin-left: 9px;
+            margin-bottom: 1px;
+              
+       
           }
         }
       }
